app/assets/stylesheets/partials/modules/_section-nav.scss
/* ======================================================================================
   @MODULES -> SECTION NAV
   ====================================================================================== */

/*
  Usage:
    Part of the main template that sits directly under the main site header but only for certain pages, that holds the 'Section nav' and 'Show products/deals/events centre selector' UI.

  Demo:
    Style Guide -> Modules -> Section Nav
*/

/* This is a hack so we can hide the nav contextual in production. */
.section-nav > .container--position-temp {
   @include to-rem(padding-top padding-bottom, $spacing-half);
   @extend %clear-fix;

   .btn--main-compact-icon-sml {
     position: static;
     @include translate(0, 0);
     float: right;
   }

   @include respond-min(868) {
     padding: 0;
     @include to-rem(height, 65);
   }
 }

.section-nav {
	@include font-size($font-size-sml, 1.5);

	/* Increase text size at this breakpoint */
	@include respond-min($non-palm) {
    @include font-size($font-size, 1.5);
  }

	/* Section nav */
	.nav-contextual {
		/* Need to make room for the centre selector toggle button */
		@include to-rem(margin-right, 41);
	  margin-bottom: 0;
	  border-bottom: 0;

	  /* Remove right margin at this breakpoint */
		@include respond-min(868) {
	    margin-right: 0;
	  }

	  /* Hide all drop downs at this breakpoint */
		@include respond-max(867) {
	    .drop-down {display: none;}
	  }

	  /* Change positioning of drop down pointer */
	  .drop-down-menu__target:before {
	  	/* Webkit */
		  @include target-webkit {
				 top: -8px;
			}
			/* IE 10 */
	    @include ie-10-up {
	      top: -7px;
	    }
	  }
	}

		/* Turn off `overflow: hidden` so we can see the drop down's at this breakpoint */
		@include respond-min(868) {
			.nav-contextual__clip__inner {
				&,
				.no-js & {overflow: visible;}
			}
		}

			/* Section nav list */
			.nav-contextual__list {

				/* Increase gutter between list items at this breakpoint */
				@include respond-min($non-palm) {
			    > li {
			    	@include to-rem(margin-left, 32);

		        &:first-child {margin-left: 0;}
			    }
			  }

			  /* Turn off oversize width as we don't need the scrolling JS behaviour */
				@include respond-min(868) {
					width: auto;
				}
			}

	/* --Show products/deals/events centre selector-- */

	/* Toggle button */
	.btn--main-compact-icon-sml {
		position: absolute;
		right: 0;
		top: 50%;
		@include translate(0, -50%);

		/* Hide at this breakpoint */
		@include respond-min(868) {
	    display: none;
	  }

	  /* Non JS users */
	  .no-js & {display: none;}
	}

	/* Centre selector */
	.flag {

		/* Make full width at this breakpoint */
		@include respond-max(420) {
	    width: 100%;
	  }

	  /* Sit over to the right edge at this breakpoint */
		@include respond-min(421) {
	    float: right;
	  }

	  /* Make the nav and centre selector sit side by side at this breakpoint */
		@include respond-min(868) {
			float: none;
	    position: absolute;
			right: 0;
			/* '65' is the height of the section nav, this is a bit fragile but should be stable enough + I'd rather not bring JS into it */
			@include to-rem(top, -65);
			@include to-rem(height, 65);
	  }

	  /* [FIXME] REMOVE THIS WHEN MOVIES HOURS GOES IN */
		select {width: 100% !important;}
	}

		/* Select list label */
		.flag__image {
			color: $color-light-txt;
			@include font-size($font-size-sml, 1.5);

			/* Bring label text into view at this breakpoint */
			@include respond-min(421) {
		    @include hide-visually-off;
		  }

		  /* Reduce the gutter at this breakpoint */
			@include respond-max(867) {
		    @include to-rem(padding-right, $spacing-half);
		  }
		}
}

	/* 'Show products/deals/events nearby centre selector' container */
	.section-nav__centre-selector {
		@extend %clear-fix;
		border-top: 1px solid $color-light-txt;
		@include to-rem(padding-top padding-bottom, $spacing-quarter);

		/* Always show at this breakpoint */
		@include respond-min(868) {

			/* JS users */
	    .js & {display: block;}

	    border-top: 0;
	    padding: 0;
	  }
	}

